--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon src/server.js"
+    "start:dev": "nodemon src/server.js",
+    "load_schema": "psql roam < src/models/db/schema/schema.sql"
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,6 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.5.1",
-    "materialize-css": "^0.100.2",
     "nodemon": "^1.12.5"
   },
   "dependencies": {
