--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nodemon": "^1.12.5"
   },
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
@@ -37,9 +38,7 @@
     "express-session": "^1.15.6",
     "method-override": "^2.3.10",
     "morgan": "^1.9.0",
-    "oauth": "^0.9.15",
     "passport": "^0.4.0",
-    "passport-facebook": "^2.1.1",
     "path": "^0.12.7",
     "pg-promise": "^7.3.2"
   }
