--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "method-override": "^2.3.10",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "pg-promise": "^7.3.2"
   }
