--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "method-override": "^2.3.10",
+    "moment": "^2.20.1",
     "morgan": "^1.9.0",
     "path": "^0.12.7",
     "pg-promise": "^7.3.2"
