--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "A travel community, code-named Roam for now, for users to share tips about their favorite locations around the world.",
   "main": "src/server.js",
   "scripts": {
+    "test": "NODE_ENV=test mocha --recursive --exit src/test",
     "start": "node src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "nodemon src/server.js",
     "db:load_schema": "psql < src/models/db/schema/schema.sql",
     "db:load_users": "psql < src/models/db/schema/seedUsers.sql",
+    "db:load_cities": "psql < src/models/db/schema/seedCities.sql",
     "db:load_posts": "psql < src/models/db/schema/seedPosts.sql",
-    "db:setup": "npm run db:load_schema && npm run db:load_users && npm run db:load_posts",
+    "db:setup": "npm run db:load_schema && npm run db:load_users && npm run db:load_cities && npm run db:load_posts",
     "setup": "npm run db:setup && npm install"
   },
   "repository": {
@@ -31,6 +32,7 @@
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
+    "chai": "^4.1.2",
     "connect-pg-simple": "^4.2.1",
     "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
@@ -38,6 +40,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "method-override": "^2.3.10",
+    "mocha": "^5.0.0",
     "moment": "^2.20.1",
     "morgan": "^1.9.0",
     "path": "^0.12.7",
