--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "moment": "^2.20.1",
     "morgan": "^1.9.0",
     "path": "^0.12.7",
+    "pem": "^1.12.3",
     "pg-promise": "^7.3.2"
   }
 }
